@@ -43,7 +43,7 @@
             <control type="textbox" id="104">
                 <left>27</left>
                 <top>85</top>
-                <width>1600</width>
+                <width>1597</width>
                 <height>740</height>
                 <font>font36_title</font>
                 <align>right</align>
